force-app/main/default/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Application_End_Reason__c</fullName>
        <label>Application End Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Different/Better Schooling Option</fullName>
                </value>
                <value>
                    <fullName>Didn’t Meet Students’ Needs</fullName>
                </value>
                <value>
                    <fullName>Socialization / School Activities</fullName>
                </value>
                <value>
                    <fullName>Wanted part-time rather than full time program</fullName>
                </value>
                <value>
                    <fullName>Not a good fit</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t remember why we started</fullName>
                </value>
                <value>
                    <fullName>Parent work schedule conflict</fullName>
                </value>
                <value>
                    <fullName>Need for more socialization</fullName>
                </value>
                <value>
                    <fullName>Not enough Help support through process</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t confidently feel I can support my child</fullName>
                </value>
                <value>
                    <fullName>Time-consuming process</fullName>
                </value>
                <value>
                    <fullName>Unable to get needed information</fullName>
                </value>
                <value>
                    <fullName>Confusing enrollment process</fullName>
                </value>
                <value>
                    <fullName>Applying for next year</fullName>
                </value>
                <value>
                    <fullName>Generally dissatisfied with curriculum/course options</fullName>
                </value>
                <value>
                    <fullName>My student wants to return to a traditional school setting for other (non-socialization related) reasons</fullName>
                </value>
                <value>
                    <fullName>My student wants to return to a traditional school setting for socialization reasons</fullName>
                </value>
                <value>
                    <fullName>Technical difficulties</fullName>
                </value>
                <value>
                    <fullName>The program/schedule is not flexible enough</fullName>
                </value>
                <value>
                    <fullName>We are moving</fullName>
                </value>
                <value>
                    <fullName>My student has enrolled in another online school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_End_Reason_internal__c</fullName>
        <description>Application End Reason (Internal)</description>
        <label>Application End Reason (Internal)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missed Deadline</fullName>
                </value>
                <value>
                    <fullName>Required Documentation incomplete</fullName>
                </value>
                <value>
                    <fullName>Time-consuming process</fullName>
                </value>
                <value>
                    <fullName>Unable to get needed information</fullName>
                </value>
                <value>
                    <fullName>Confusing enrollment process</fullName>
                </value>
                <value>
                    <fullName>Applying for next year</fullName>
                </value>
                <value>
                    <fullName>Technical difficulties</fullName>
                </value>
                <value>
                    <fullName>We are moving</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Duplicate Account</fullName>
                </value>
                <value>
                    <fullName>Graduated</fullName>
                </value>
                <value>
                    <fullName>Inactivity/Lack of Attendance</fullName>
                </value>
                <value>
                    <fullName>No reason provided</fullName>
                </value>
                <value>
                    <fullName>Violation of state regulations</fullName>
                </value>
                <value>
                    <fullName>Regulation – Technology</fullName>
                </value>
                <value>
                    <fullName>Regulation – Disciplinary History</fullName>
                </value>
                <value>
                    <fullName>Regulation – Eligibility</fullName>
                </value>
                <value>
                    <fullName>Enrollment Issues, Eligibility, or Caps</fullName>
                </value>
                <value>
                    <fullName>Inactivity</fullName>
                </value>
                <value>
                    <fullName>Didn’t Meet Students’ Needs</fullName>
                </value>
                <value>
                    <fullName>Regulation</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Different/Better Schooling Option</fullName>
                </value>
                <value>
                    <fullName>Socialization / School Activities</fullName>
                </value>
                <value>
                    <fullName>Not a good fit</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t remember why we started</fullName>
                </value>
                <value>
                    <fullName>Parent work schedule conflict</fullName>
                </value>
                <value>
                    <fullName>Need for more socialization</fullName>
                </value>
                <value>
                    <fullName>Not enough Help support through process</fullName>
                </value>
                <value>
                    <fullName>Wanted part-time rather than full time program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CL_ReenrollmentCheckbox__c</fullName>
        <description>Does the CT want to Re-enroll this student?</description>
        <label>CL ReenrollmentCheckbox</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_TypeofStudentReenrollment__c</fullName>
        <description>What type of re-enrollment is this student?</description>
        <label>CL TypeofStudentReenrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCA</fullName>
                </value>
                <value>
                    <fullName>Connections Learning Institution</fullName>
                </value>
                <value>
                    <fullName>External Client</fullName>
                </value>
                <value>
                    <fullName>iNaCA Full Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caretaker_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caretaker Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commit_Date_Count__c</fullName>
        <description>Number of days after completion of the Intent to Enroll</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Commit Date Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Date__c</fullName>
        <description>Confirmation Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Application__c</fullName>
        <description>Replaces Direct to Connexus</description>
        <label>Direct Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_Final_Confirmation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Earliest Final Confirmation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Offer_Accept_Date__c</fullName>
        <description>date enrollment offer was accepted</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Offer Accept Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Offer_Mailed_On__c</fullName>
        <description>date enrollment offer was mailed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Offer Mailed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Offer_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Offer Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Offer_Status__c</fullName>
        <description>status of enrollment offer</description>
        <label>Enrollment Offer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Reactivation_Status__c</fullName>
        <description>Enrollment Reactivation Status</description>
        <label>Enrollment Reactivation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FC_Deadline_Communicated__c</fullName>
        <description>Day the caretaker must complete Final Confirmation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FC Deadline Communicated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Call_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Confirmation Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Checklist__c</fullName>
        <description>FinalConfirmationChecklist1718</description>
        <label>Final Confirmation Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I have read and agree to the Conditions of Enrollment listed above.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Semester_Indicator__c</fullName>
        <label>Final Semester Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Reactivation_Date__c</fullName>
        <description>Full Reactivation Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Reactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Reactivation_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who executed the last full reactivation</description>
        <label>Full Reactivation User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Student_Was_Reactivated__c</fullName>
        <description>How was this student reactivated</description>
        <label>How Student Was Reactivated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caretaker</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intent_To_Enroll_Complete_Date__c</fullName>
        <description>Intent to Enroll Completion Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Intent To Enroll Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_to_App_Less_than_2_Days__c</fullName>
        <label>Lead to App Less than 2 Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lottery_Exempt__c</fullName>
        <description>Is the student exempt from lottery</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lottery Exempt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Preference_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lottery Preference Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Selection_Date__c</fullName>
        <description>Date selected in lottery</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lottery Selection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lottery_Selection__c</fullName>
        <label>Lottery Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCA_Enroll_Commitment__c</fullName>
        <description>Please make the appropriate selection below to accept or decline this offer</description>
        <label>MCA Enroll Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I am declining the offer of enrollment for my student.</fullName>
                </value>
                <value>
                    <fullName>I declare my commitment to enroll for my student for the 2018–19 school year.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCA_Intent_to_Enroll_Completion_Counter__c</fullName>
        <description>Intent to Enroll Completion Counter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MCA Intent to Enroll Completion Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFA_Provisional_Enrollment__c</fullName>
        <description>Provisional Enrollment (&quot;Provisionally Enrolled&quot; will set the student to Enrolled)</description>
        <label>MFA Provisional Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional Enrollment Lapsed</fullName>
                </value>
                <value>
                    <fullName>Provisionally Enrolled</fullName>
                </value>
                <value>
                    <fullName>Regular Enrollment Tasks Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NaCA_DEP_WD_Reason__c</fullName>
        <description>Reason for the During Enrollment Process Withdrawal</description>
        <label>NaCA DEP WD Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate student</fullName>
                </value>
                <value>
                    <fullName>Student did not enroll</fullName>
                </value>
                <value>
                    <fullName>Student did not re-enroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newly_Enrolling_Student__c</fullName>
        <description>Newly Enrolling Student</description>
        <inlineHelpText>Priority for Review</inlineHelpText>
        <label>Newly Enrolling Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value To be added</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Enroll_Position__c</fullName>
        <description>Offer Enroll Position</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Enroll Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferofEnrollmentAcceptance__c</fullName>
        <label>OfferofEnrollmentAcceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I understand and accept this offer of enrollment.</fullName>
                </value>
                <value>
                    <fullName>I am declining this offer of enrollment for my student.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenApplicationAcknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Open Application Acknowledgement</description>
        <label>OpenApplicationAcknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreferredStartDate__c</fullName>
        <description>Preferred Start Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previously_Enrolled_in_CA_School2__c</fullName>
        <description>The Connections Academy School the student attended</description>
        <label>Previously Enrolled in CA School2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Arizona Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Arkansas Connections Academy</fullName>
                </value>
                <value>
                    <fullName>California Connections Academy at North Bay</fullName>
                </value>
                <value>
                    <fullName>California Connections Academy at Ripon</fullName>
                </value>
                <value>
                    <fullName>Capistrano Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Central California Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Colorado Connections Academy at Durago</fullName>
                </value>
                <value>
                    <fullName>Colorado Connections Academy at Mapleton</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Connections Academy school attended is not listed</fullName>
                </value>
                <value>
                    <fullName>Florida Virtual School Full Time Home Ed</fullName>
                </value>
                <value>
                    <fullName>Florida Virtual School Full Time Public</fullName>
                </value>
                <value>
                    <fullName>Georgia Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Great Lakes Cyber Academy</fullName>
                </value>
                <value>
                    <fullName>Indiana Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Indiana Connections Career Academy</fullName>
                </value>
                <value>
                    <fullName>INSPIRE Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Iowa Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Kansas Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Louisiana Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Maine Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Michigan Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Minnesota Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Nevada Connections Academy</fullName>
                </value>
                <value>
                    <fullName>New Mexico Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Ohio Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Oklahoma Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Oregon Connections Academy</fullName>
                </value>
                <value>
                    <fullName>Pecos Connections Academy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reactivation Date</description>
        <label>Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Declined_Offer__c</fullName>
        <description>Reason Enrollment Offer was not accepted</description>
        <label>Reason Declined Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deadline Date Passed</fullName>
                </value>
                <value>
                    <fullName>Enrollment Offer Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Engaged_Grassroots_User__c</fullName>
        <description> SFDC Engaged Grassroots User</description>
        <encryptionScheme>None</encryptionScheme>
        <label> SFDC Engaged Grassroots User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Informed__c</fullName>
        <description>SFDC Enrolled</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Informed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_in_Lottery__c</fullName>
        <description>Indicator for whether the applicant was selected in lottery</description>
        <label>Selected in Lottery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Semester_Indicator__c</fullName>
        <label>Semester Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                    <default>true</default>
                    <label>First</label>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_Declaration_of_Intent__c</fullName>
        <description>Signed Declaration of Intent to Enroll has been received</description>
        <label>Signed Declaration of Intent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Soft_Reactivation_Date__c</fullName>
        <description>Soft Reactivation Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Soft Reactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Act_Status__c</fullName>
        <description>Program Enrollment record status</description>
        <formula>ISPICKVAL( Program_Enrollment__r.Status__c, &apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Act Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Student Id)</relationshipLabel>
        <relationshipName>Opportunities_Stdnt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Not_Eligible_for_Reactivation__c</fullName>
        <description>Reason student is not eligible for reactivation</description>
        <label>Student Not Eligible for Reactivation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disciplinary History</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <description>User Story 102586</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WaitList_Added_Time__c</fullName>
        <description>The time and date that the user was added to the waitlist</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WaitList Added Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iNaCA_Spring_Enrollment__c</fullName>
        <description>Spring Only Academic Term</description>
        <label>iNaCA Spring Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>